# DAV

./: .gitignore  README.md  config.toml  pyproject.toml
data/processed/: anon_reference.json  whatsapp-20250923-192055.parq  whatsapp-20250928-214244.parq  whatsapp-20251006-120641.parq  whatsapp-20251006-125250.parq  whatsapp-20251006-153902.parq  whatsapp-20251006-160851.parq  whatsapp-20251006-161710.parq  whatsapp-20251006-183039.parq
data/raw/: _chat.txt
notebooks/: 01-cleaning-data.ipynb  02-categories.ipynb  03-distributions.ipynb  04-correlation.ipynb  05-dimensionality.ipynb  06-time-series.ipynb
src/: __init__.py  concept_settings.py  main.py
src/archive/: add_features_old_2.py  categories_old.py  clean_data_old.py  cleaning_data_old.py  correlation_graph_test.py  distribution_graph_test.py  time_series_v2.py
src/dav_bas_hv/: 01_categories.py  03_distribution.py  add_features.py  add_features_v2.py  categories_graph.py  clean_data.py  clean_data_v2  clean_data_v2.py  correlation_graph.py  dimensionality_graph.py  distribution_graph.py  main.py  main_2.py  preprocess.py  settings.py  test.py  time_series.py
src/dav_bas_hv/data_handling/: clean_data.py  clean_data_v2.py  main.py  preprocess.py  settings.py
src/dav_bas_hv/graphs/: dimensionality_graph.py  distribution_graph.py  time_series_graph.py
vs_code/: settings.json
