[project]
name = "dav"
version = "0.1.0"
description = "This is the code for the Master of Applied Data Science course Data Analysis and Visualisation"
authors = [
    {name = "Bas hooge Venterink", email = "bas.hoogeventerink@student.hu.nl"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "loguru>=0.7.3",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "pytz>=2025.2",
    "textblob>=0.19.0",
    "wa-analyzer>=0.4.1",
]

[project.urls]
GitHub = "https://github.com/bashoogeventerink-max/DAV"

[project.scripts]
mymodule = "mymodule.main:main"
